package com.parking.enums;

public enum VehicleType {
    CAR,
    BUS,
    BIKE
}
