// com/parking/payment/PaymentStrategy.java
package com.parking.payment;

public interface PaymentStrategy {
    void pay(int amount);
}