// com/parking/pricing/PricingStrategy.java
package com.parking.pricing;

public interface PricingStrategy {
    int calculatePrice(long duration);
}